# refactor

./: pyproject.toml
.claude/: settings.local.json
app/: birth.py  dummy.py  main.py
app/agent/: transformers.py
app/core/: __init__.py  lifespan.py
app/database/: dummy_df.json
app/dependencies/: __init__.py  dependencies.py
app/models/: models.py
app/services/: probability.py  sheets.py
app/utils/: all_utils.py  utils.py
database/: dataframe_refatorado.xlsx  depara_cidade.json  depara_estado.json  ~$dataframe_refatorado.xlsx
